introduced separate packages for courses moved Roman.java to W1 package reviewed deprecated methods new files:    LiczbyPierwsze.java    Primes.java